--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ reqwest = { version = "*", features = ["json"] }
 tokio = { version = "1.21.2", features = ["full"] }
 dotenv = "0.15.0"
 envy = "0.4.2"
+url = "2.3.1"
+thiserror = "1.0.37"
 
 [[bin]]
 name = "ytdlrs_lib"
