--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 serde_json = "1.0.85"
 serde = {version = "1.0.145", features = ["derive"]}
-reqwest = { version = "*", features = ["json"] }
+reqwest = { version = "*", features = ["json", "blocking"] }
 tokio = { version = "1.21.2", features = ["full"] }
 dotenv = "0.15.0"
 envy = "0.4.2"
