--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ edition = "2021"
 serde_json = "1.0.85"
 serde = {version = "1.0.145", features = ["derive"]}
 reqwest = { version = "*", features = ["json", "blocking"] }
-tokio = { version = "1.21.2", features = ["full"] }
 dotenv = "0.15.0"
 envy = "0.4.2"
 url = "2.3.1"
 thiserror = "1.0.37"
+
+[[bin]]
+name = "ytdlrs"
+path = "src/main__.rs"
